--- a/ejecicio6/porfolio/indice.html
+++ b/ejecicio6/porfolio/indice.html
@@ -7,7 +7,7 @@
     <link rel="icon" type="image/ico" href="/favicon.ico">
 </head>
 <body>
-    <a href="/indice.html">Volver a la pagina principal</a>
+    <a href="/ejecicio6/6.indice.html">Volver a la pagina principal</a>
 
     <h1>Ultimos proyectos</h1>
 
