--- a/ejecicio6/porfolio/proyecto1.html
+++ b/ejecicio6/porfolio/proyecto1.html
@@ -10,7 +10,7 @@
     
     <h1>Proyecto 1</h1>
 
-    <img src="/proyecto1.png" alt="Proyecto1, expanding internet services">
+    <img src="/ejecicio6/proyecto1.png" alt="Proyecto1, expanding internet services">
 
     <br>
 
