--- a/ejecicio6/porfolio/proyecto2.html
+++ b/ejecicio6/porfolio/proyecto2.html
@@ -9,7 +9,7 @@
         
     <h1>Proyecto 2</h1>
 
-    <img src="/proyecto2.png" alt="Proyecto2, andreas02, a new desing idea">
+    <img src="/ejecicio6/proyecto2.png" alt="Proyecto2, andreas02, a new desing idea">
 
     <br>
 
