--- a/ejecicio6/porfolio/proyecto1.html
+++ b/ejecicio6/porfolio/proyecto1.html
@@ -8,7 +8,13 @@
 </head>
 <body>
     
-    <h1>Proyecto 1</h1>
+    <h1>Ultimos proyectos</h1>
+
+    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Et adipisci numquam alias neque vel in iure quod exercitationem dolore architecto itaque quae, facilis nobis magni unde dolor eos at eveniet. </p>
+
+    <h2>Proyecto 1</h2>
+
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt voluptates ratione nisi dolor dignissimos, mollitia provident quas saepe ea quia in perspiciatis ipsam corporis ducimus ipsa. Earum recusandae et maxime?</p>
 
     <img src="/ejecicio6/proyecto1.png" alt="Proyecto1, expanding internet services">
 
