--- a/ejecicio6/porfolio/proyecto2.html
+++ b/ejecicio6/porfolio/proyecto2.html
@@ -6,8 +6,14 @@
     <title>Document</title>
 </head>
 <body>
-        
-    <h1>Proyecto 2</h1>
+    <h1>Ultimos proyectos</h1>
+
+    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Et adipisci numquam alias neque vel in iure quod exercitationem dolore architecto itaque quae, facilis nobis magni unde dolor eos at eveniet. </p>
+
+    <h2>Proyecto 2</h2>
+
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt voluptates ratione nisi dolor dignissimos, mollitia provident quas saepe ea quia in perspiciatis ipsam corporis ducimus ipsa. Earum recusandae et maxime?</p>
+
 
     <img src="/ejecicio6/proyecto2.png" alt="Proyecto2, andreas02, a new desing idea">
 
